--- a/src/app/summoner-search/summoner-search.component.scss
+++ b/src/app/summoner-search/summoner-search.component.scss
@@ -1,6 +1,6 @@
 .wrapper {
     display: flex;
     justify-content: center;
-    align-content: center;
-    flex-direction: row;
+    align-items: center;
+    flex-direction: column;
 }
