--- a/src/app/summoner-search/summoner-search.component.scss
+++ b/src/app/summoner-search/summoner-search.component.scss
@@ -3,4 +3,16 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    height: 100%;
+}
+
+.search{
+    align-items: center;
+    display: flex;
+}
+.form{
+    width: 500px;
+}
+.disclaimer{
+    font-size: 12px;
 }
