--- a/src/app/summoner-profile/summoner-description/summoner-description.component.html
+++ b/src/app/summoner-profile/summoner-description/summoner-description.component.html
@@ -1,4 +1,20 @@
-<div class="ifexists">
-    <h1>{{summonerName}}</h1>
-    <img [src]="iconURL">
+<div class="wrapper">
+    <mat-card>
+        <mat-card-header>
+            <div [ngStyle]="{'background-image': 'url(' + iconURL + ')', 'background-size': 'cover'}" mat-card-avatar>
+            </div>
+            <mat-card-title>{{summonerName}}</mat-card-title>
+            <mat-card-subtitle>{{summonerTier}} {{summonerRank}} {{leaguePoints}} LP</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+            <img [src]="rankURL" height="200px">
+        </mat-card-content>
+        <mat-card-actions>
+            <mat-chip-list class="winloose">
+                <mat-chip color="accent" selected>{{wins}}W</mat-chip>
+                <mat-chip color="warn" selected>{{losses}}L</mat-chip>
+                <mat-chip color="primary" selected>Win Ratio {{winrate}}%</mat-chip>
+            </mat-chip-list>
+        </mat-card-actions>
+    </mat-card>
 </div>
